# freeLib-mac

./: CMakeLists.txt  DEPRECATED_deploy_macos_qt6.sh  README.md  deploy_macos.sh  deploy_macos_qt6.sh  deploy_ubuntu.sh
freeLib/src/: library.cpp  main.cpp  mainwindow.cpp  settingsdlg.cpp
freeLib/src/SmtpClient/: .gitignore  CMakeLists.txt  README.md
freeLib/src/SmtpClient/.github/: FUNDING.yml
freeLib/src/SmtpClient/.github/workflows/: main.yml
freeLib/src/SmtpClient/demos/: CMakeLists.txt
freeLib/src/SmtpClient/demos/demo1/: CMakeLists.txt  demo1.cpp
freeLib/src/SmtpClient/demos/demo2/: CMakeLists.txt
freeLib/src/SmtpClient/demos/demo3/: CMakeLists.txt
freeLib/src/SmtpClient/demos/demo4/: CMakeLists.txt
freeLib/src/SmtpClient/doc/: doc.qdocconf  style.css
freeLib/src/SmtpClient/src/: emailaddress.cpp  emailaddress.h  mimeattachment.cpp  mimeattachment.h  mimefile.cpp  mimefile.h  mimemessage.cpp  mimemessage.h  mimemultipart.cpp  mimepart.cpp  mimepart.h  mimeqpencoder.cpp  mimetext.cpp  quotedprintable.cpp  quotedprintable.h  smtpclient.cpp  smtpclient.h  smtpmime_global.h
